--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,19 +1,32 @@
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Arial", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  position: relative;
 }
 
 .container {
   width: 80%;
   margin: 0 auto;
+  padding-bottom: 50px;
+  height: 5;
 }
 
 header {
   background-color: #333;
   color: white;
   padding: 30px 0;
+  flex: 0 0 auto;
 }
 
 header h1 {
@@ -42,15 +55,33 @@ section {
   padding: 5px;
   margin-top: 5px;
   border-radius: 8px;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
-footer {
-  background-color: #333;
+.wrapper {
+  margin: 0;
+  margin-bottom: 40px;
+}
+
+#pie {
+  height: 50px;
+  line-height: 50px;
+  background: black;
   color: white;
   text-align: center;
-  padding: 10px 0;
-  position: absolute;
-  bottom: 0;
+  left: 0;
   width: 100%;
-  height: 2em;
+  height: 40px;
+}
+
+.cabecera {
+  margin: 10;
+  padding: 100;
+  flex: 1;
 }
